# genai-experiments

./: .gitignore  README.md  pyproject.toml
apps/reporting-dashboard/: index.html  package.json  tailwind.config.cjs
clients/: document_processing_client.py
databricks/: __init__.py  dlq_replay.py  document_intelligence_workflow.py  sqs_batch_ingestion.py  summarization.py
databricks/routing/: router.py
delta/: raw_ingestion_metadata.sql
docs/: idp_service_architecture.md
docs/idp_router/: README.md
docs/runbooks/: databricks_ingestion.md  document_processing_api.md
docs/sample_documents/: README.md
idp_router/: __init__.py  router.py
idp_router/layout/: __init__.py  huggingface.py
idp_service/: __init__.py  document_intelligence_storage.py  document_intelligence_workflow.py  enrichment.py  llm_document_intelligence_proxy.py  observability.py  sample_documents_embedded.py  sqs_batch_ingestion.py
idp_service/routing/: __init__.py  router.py
infrastructure/aws/: cloud_storage_ingestion.tf  cloud_storage_ingestion.yaml
notebooks/: idp_end_to_end_demo.ipynb  idp_production_simulation.ipynb  idp_router_quickstart.ipynb  idp_validation_suite.ipynb
parsers/: __init__.py  canonical_schema.py  denormalized.py
parsers/adapters/: __init__.py  azure_document_intelligence.py  base.py  databricks_llm_image.py  email_parser.py  multi_parser.py  pymupdf.py
pydantic/: __init__.py
services/reporting-api/: .env.example  (+1 more)
tests/: test_denormalized.py  test_document_intelligence.py  test_enrichment.py  test_llm_proxy.py  test_routing.py  test_summarization.py
(+49 files in other folders)
